--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 </li>
 </div>
 </ul>
-<p>@Copyright.</p>
+<p class="text-center">@Copyright.</p>
 </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
