--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <section id="banner">
 <div class="menu-bar"id="sticky"> 
-	<img src="./images/logo.jpg" class="logo">
+	<div class="logo">
+		<img src="./images/logo.jpg">
+	</div>
+	
 <ul>
 <li class="active"><a href="#"><i class="bi bi-bank2"></i></i>Home</a></li>
 <li><a href="#"><i class="bi bi-border-width"></i>About Us</a>
